# switchboard_plugins

./: .gitignore  AGENTS.md  Cargo.toml  README.md  manifest.json
.github/workflows/: ci.yml  release.yml
plugins/agents/: Cargo.toml  README.md  build.rs
plugins/agents/proto/arp/v1/: agent.proto  discovery.proto  project.proto  token.proto  types.proto  workspace.proto
plugins/agents/proto/google/api/: annotations.proto  field_behavior.proto
plugins/agents/src/: lib.rs  tools.rs
plugins/homeassistant/: Cargo.toml
plugins/homeassistant/src/: lib.rs  tools.rs
plugins/lidarr/: Cargo.toml
plugins/lidarr/src/: lib.rs  tools.rs
plugins/prowlarr/: Cargo.toml
plugins/prowlarr/src/: lib.rs  tools.rs
plugins/radarr/: Cargo.toml
plugins/radarr/src/: lib.rs  tools.rs
plugins/readarr/: Cargo.toml
plugins/readarr/src/: lib.rs  tools.rs
plugins/sonarr/: Cargo.toml
plugins/sonarr/src/: lib.rs  tools.rs
tools/wasm-debug/: go.mod  go.sum  main.go
