[package]
name = "agents-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
switchboard-guest-sdk = { git = "https://github.com/daltoniam/switchboard.git" }
serde.workspace = true
serde_json.workspace = true
prost = "0.14"
prost-types = "0.14"

[build-dependencies]
prost-build = "0.14"
